--- a/admin/login.html
+++ b/admin/login.html
@@ -19,6 +19,19 @@
         <p>Admin Panel</p>
        </div>
     </header>
+    <!-- form -->
+    <div class="login_parent">
+    <div class="login">
+        <div class="login__header">
+            <h2>Welcome Admin</h2>
+        </div>
+        <form action="" class="login__form">
+            <input type="text" placeholder="Username">
+            <input type="password" placeholder="Password">
+            <button type="submit">Join</button>
+        </form>
+    </div>
+    </div>
     <!-- Js -->
     <script src="./assets/js/login.js"></script>
 </body>
