--- a/admin/panel.html
+++ b/admin/panel.html
@@ -69,51 +69,81 @@
       </div>
     </div>
     <!-- Main -->
-    <div class="main">
-      <div class="add_book">
-        <h2 class="add_book__title">Add book</h2>
-        <div class="search_book">
-          <h3 class="search_book__title">Search book</h3>
-          <form action="" class="search_book_form">
-            <input type="text" placeholder="Book Name" />
-            <button class="search_book_btn">
+    <div class="container">
+      <div class="main">
+        <div class="add_book">
+          <h2 class="add_book__title">Add book</h2>
+          <div class="search_book">
+            <h3 class="search_book__title">Search book</h3>
+            <form action="" class="search_book_form">
+              <input type="text" placeholder="Book Name" />
+              <button class="search_book_btn">
                 <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
-          </form>
-          <div>
-            <!--  -->
+              </button>
+            </form>
+            <div>
+              <!--  -->
+            </div>
           </div>
         </div>
         <div class="book_form">
-         <h3 class="book_form__title">Book form</h3>
-         <div>
+          <h3 class="book_form__title">Book form</h3>
             <form action="" class="book_form_add">
-                <div class="book_name">
-                    <label for="bk_name">Book Name</label>
-                    <input type="text" id="bk_name">
+              <div class="book_name">
+                <label for="bk_name">Book Name</label>
+                <input type="text" id="bk_name" />
+              </div>
+              <div class="author_name">
+                <label for="ath_name">Author Name</label>
+                <input type="text" id="ath_name" />
+              </div>
+              <div class="book_image_url">
+                <label for="bk_url">Book Image Url</label>
+                <input type="text" id="bk_url" />
+              </div>
+              <div class="description">
+                <label for="dscrpt">Description</label>
+                <textarea
+                  name="description"
+                  id="dscrpt"
+                  cols="30"
+                  rows="10"
+                ></textarea>
+              </div>
+              <div class="book_type">
+                <label for="bk_type">Book Type</label>
+                <input type="text" id="bk_type" />
+              </div>
+              <div class="book_submit">
+                <button type="submit">Add</button>
+              </div>
+            </form>
+        </div>
+        <div class="about_form">
+            <h3 class="about_form__title">About Store</h3>
+              <form action="" class="about_form_add">
+                <div class="about_title">
+                  <label for="ab_title">Title</label>
+                  <input type="text" id="ab_title" />
                 </div>
-                <div class="author_name">
-                    <label for="ath_name">Author Name</label>
-                    <input type="text" id="ath_name">
-                </div>
-                <div class="book_image_url">
-                    <label for="bk_url">Book Image Url</label>
-                    <input type="text" id="bk_url">
+                <div class="about_image_url">
+                  <label for="bk_url">Book Image Url</label>
+                  <input type="text" id="bk_url" />
                 </div>
                 <div class="description">
-                    <label for="dscrpt">Description</label>
-                    <textarea name="description" id="dscrpt" cols="30" rows="10"></textarea>
+                  <label for="dscrpt">Description</label>
+                  <textarea
+                    name="description"
+                    id="dscrpt"
+                    cols="30"
+                    rows="10"
+                  ></textarea>
                 </div>
-                <div class="book_type">
-                    <label for="bk_type">Book Type</label>
-                    <input type="text" id="bk_type">
+                <div class="about_submit">
+                  <button type="submit">About info add</button>
                 </div>
-                <div class="book_submit">
-                   <button type="submit">Add</button>
-                </div>
-            </form>
-         </div>
-        </div>
+              </form>
+          </div>
       </div>
     </div>
     <!-- Js -->
