--- a/admin/panel.html
+++ b/admin/panel.html
@@ -144,6 +144,64 @@
                 </div>
               </form>
           </div>
+          <div class="join_us">
+            <h2 class="join_us_title">Join  Us</h2>
+            <table class="join_us_table">
+              <tr>
+                <th>#</th>
+                <th>Full Name</th>
+                <th>Email Address</th>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>Audrey Mckinney</td>
+                <td>lisa.watson@example.com</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Audrey Mckinney</td>
+                <td>lisa.watson@example.com</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Audrey Mckinney</td>
+                <td>lisa.watson@example.com</td>
+              </tr>
+            </table>
+          </div>
+          <div class="contact_us">
+            <h2 class="contact_us_title">Contact Us</h2>
+            <table class="contact_us_table">
+              <tr>
+                <th>#</th>
+                <th>Full Name</th>
+                <th>Address</th>
+                <th>Email Address</th>
+                <th>Phone Number</th>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>Audrey Mckinney</td>
+                <td>1473 Ranchview Dr undefined San Jose</td>
+                <td>lisa.watson@example.com</td>
+                <td>(209) 555-0104</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Audrey Mckinney</td>
+                <td>1473 Ranchview Dr undefined San Jose</td>
+                <td>lisa.watson@example.com</td>
+                <td>(209) 555-0104</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Audrey Mckinney</td>
+                <td>1473 Ranchview Dr undefined San Jose</td>
+                <td>lisa.watson@example.com</td>
+                <td>(209) 555-0104</td>
+              </tr>
+            </table>
+          </div>
       </div>
     </div>
     <!-- Js -->
