--- a/admin/admin.html
+++ b/admin/admin.html
@@ -25,14 +25,14 @@
         <div class="login__header">
             <h2>Welcome Admin</h2>
         </div>
-        <form action="" class="login__form">
-            <input type="text" placeholder="Username">
-            <input type="password" placeholder="Password">
-            <button type="submit">Join</button>
-        </form>
+        <div class="login__form">
+            <input type="text" placeholder="Username" id="user">
+            <input type="password" placeholder="Password" id="pass">
+            <button>Join</button>
+        </div>
     </div>
     </div>
     <!-- Js -->
-    <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/login.js" type="module"></script>
 </body>
 </html>
