--- a/admin/panel.html
+++ b/admin/panel.html
@@ -96,14 +96,14 @@
           <h2 class="add_book__title">Add book</h2>
           <div class="search_book">
             <h3 class="search_book__title">Search book</h3>
-            <form action="" class="search_book_form">
-              <input type="text" placeholder="Book Name" />
-              <button class="search_book_btn">
+            <div class="search_book_form">
+              <input type="text" placeholder="Book Name" id="api_search"/>
+              <button class="search_book_btn" id="api_search_btn">
                 <i class="fa-solid fa-magnifying-glass"></i>
               </button>
-            </form>
-            <div>
-              <!--  -->
+            </div>
+            <div class="search_result">
+              <h3>Salam</h3>
             </div>
           </div>
         </div>
