--- a/admin/panel.html
+++ b/admin/panel.html
@@ -91,6 +91,10 @@
     </div>
     <!-- Main -->
     <div class="container">
+      <div class="admin">
+        <img src="./assets/img/Combined Shape.png" alt="">
+        <h2>Admin</h2>
+      </div>
       <div class="main">
         <div class="add_book" id="add_book">
           <h2 class="add_book__title">Add book</h2>
@@ -103,7 +107,6 @@
               </button>
             </div>
             <div class="search_result">
-              <h3>Salam</h3>
             </div>
           </div>
         </div>
@@ -161,7 +164,7 @@
               ></textarea>
             </div>
             <div class="about_submit">
-              <button>About info add</button>
+              <button>About info Save</button>
             </div>
           </div>
         </div>
