--- a/admin/panel.html
+++ b/admin/panel.html
@@ -138,6 +138,10 @@
               <label for="bk_type">Book Type</label>
               <input type="text" id="bk_type" required/>
             </div>
+            <div class="book_year">
+              <label for="book_year">Book Year</label>
+              <input type="text" id="book_year" required/>
+            </div>
             <div class="book_submit">
               <button type="submit">Add</button>
             </div>
