--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     </div>
     <div class="header__list">
     <ul>
-      <li><a href="./../library/index.html">Home</a></li>
-      <li><a href="./../library/catalog.html">Catalog</a></li>
-      <li><a href="./../library/aboutStore.html">About Store</a></li>
-      <li><a href="./../library/contactUs.html">Contact Us</a></li>
-      <li><a href="./../library/search.html">Search</a></li>
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./catalog.html">Catalog</a></li>
+      <li><a href="./aboutStore.html">About Store</a></li>
+      <li><a href="./contactUs.html">Contact Us</a></li>
+      <li><a href="./search.html">Search</a></li>
     </ul>
     <div><img src="./assets/img/remove.png" alt=""></div>
   </div>
@@ -73,7 +73,7 @@
             In our store you can find a book for every taste. A large
             assortment. Nice prices. Interesting stories.
           </p>
-          <a href="./../library/catalog.html" class="title__link">Go to catalog</a>
+          <a href="./catalog.html" class="title__link">Go to catalog</a>
         </div>
         <div class="hero__container">
           <div class="hero__background-1"></div>
