--- a/admin.html
+++ b/admin.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <!-- Css -->
-    <link rel="stylesheet" href="./assets/css/login.css">
+    <link rel="stylesheet" href="./assets_admin/css/login.css">
     <!-- Js -->
-    <script src="./assets/js/login.js" type="module"></script>
+    <script src="./assets_admin/js/login.js" type="module"></script>
 </head>
 <body>
     <!-- header -->
     <header class="header">
        <div class="header__img">
-        <img src="./assets/img/Vector.png" alt="Vector.png">
+        <img src="./assets_admin/img/Vector.png" alt="Vector.png">
        </div>
        <div class="header__title">
         <h2>LIBRARY</h2>
