--- a/panel.html
+++ b/panel.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panel</title>
     <!-- Css -->
-    <link rel="stylesheet" href="./assets/css/panel.css" />
-    <link rel="stylesheet" href="assets/css/nav.css">
+    <link rel="stylesheet" href="./assets_admin/css/panel.css" />
+    <link rel="stylesheet" href="./assets_admin/css/nav.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -16,14 +16,14 @@
       referrerpolicy="no-referrer"
     />
         <!-- Js -->
-        <script src="./assets/js/panel.js" type="module" defer></script>
+        <script src="./assets_admin/js/panel.js" type="module" defer></script>
   </head>
   <body>
     <!-- Responsive Nav -->
     <div class="navbar">
       <div class="nav_left">
         <div class="nav_img">
-          <img src="./assets/img/Vector_red.png" alt="">
+          <img src="./assets_admin/img/Vector_red.png" alt="">
         </div>
         <div class="nav_title">
           <h2>LIBRARY</h2>
@@ -38,7 +38,7 @@
     <div class="sidebar">
       <div class="sidebar__header">
         <div class="header__img">
-          <img src="./assets/img/Vector.png" alt="Vector.png" />
+          <img src="./assets_admin/img/Vector.png" alt="Vector.png" />
         </div>
         <div class="header__title">
           <h2>LIBRARY</h2>
@@ -50,7 +50,7 @@
       </div>
       <div class="sidebar__list">
         <div class="list__img">
-          <img src="./assets/img/Vector.png" alt="Vector.png" />
+          <img src="./assets_admin/img/Vector.png" alt="Vector.png" />
         </div>
         <div class="list__title">
           <h2><a href="#add_book">Home</a></h2>
@@ -58,7 +58,7 @@
       </div>
       <div class="sidebar__list">
         <div class="list__img">
-          <img src="./assets/img/Vector.png" alt="Vector.png" />
+          <img src="./assets_admin/img/Vector.png" alt="Vector.png" />
         </div>
         <div class="list__title">
           <h2><a href="#about_form">About</a></h2>
@@ -66,7 +66,7 @@
       </div>
       <div class="sidebar__list">
         <div class="list__img">
-          <img src="./assets/img/Vector.png" alt="Vector.png" />
+          <img src="./assets_admin/img/Vector.png" alt="Vector.png" />
         </div>
         <div class="list__title">
           <h2><a href="#join_us">Join Us</a></h2>
@@ -74,7 +74,7 @@
       </div>
       <div class="sidebar__list">
         <div class="list__img">
-          <img src="./assets/img/Vector.png" alt="Vector.png" />
+          <img src="./assets_admin/img/Vector.png" alt="Vector.png" />
         </div>
         <div class="list__title">
           <h2><a href="#contact_us">Contact</a></h2>
@@ -82,7 +82,7 @@
       </div>
       <div class="sidebar__list">
         <div class="list__img">
-          <img src="./assets/img/Vector.png" alt="Vector.png" />
+          <img src="./assets_admin/img/Vector.png" alt="Vector.png" />
         </div>
         <div class="list__title">
           <h2><a href="" id="log_out">Logout</a></h2>
@@ -92,7 +92,7 @@
     <!-- Main -->
     <div class="container">
       <div class="admin">
-        <img src="./assets/img/Combined Shape.png" alt="">
+        <img src="./assets_admin/img/Combined Shape.png" alt="">
         <h2>Admin</h2>
       </div>
       <div class="main">
