--- a/book.html
+++ b/book.html
@@ -68,9 +68,9 @@
     <div id="umumi">
       <button id="back_btn"><a id="back_btn_text">&lt BACK</a></button>
 
-      <div id="mid_div">
+    <div id="mid_div">
         <div id="mid_left">
-          <div id="blue"><p></p></div>
+          <div id="blues"><p></p></div>
           <p style="font-size: 35px; font-weight: 700" class="bookname"></p>
           <p style="font-size: 16px; font-weight: 700" class="publishdate"></p>
           <p style="font-size: 22px" class="authorname"></p>
